# demo-telebot

./: .env.template  .isort.cfg  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: __init__.py  main.py
bot/alembic/: env.py
bot/alembic/versions/: 03aef0fba8c8_.py  50b3bebb1986_.py  cc1c783b17cd_.py
bot/apps/: __init__.py
bot/apps/cards/: __init__.py  common.py  enums.py  factories.py  handlers.py  layouts.py  prompts.py
bot/apps/cards/handlers/: __init__.py  message.py  query.py
bot/apps/root/: __init__.py  middlewares.py
bot/core/: __init__.py  config.py
bot/models/: __init__.py  card.py  user.py
