[project]
name = "demo-telebot"
version = "0.1.0"
description = "Demo bot using pytelegrambotapi"
readme = "README.md"
requires-python = ">=3.12"
src="bot"
dependencies = [
    "aiohttp>=3.11.6",
    "pydantic-settings>=2.6.1",
    "pytelegrambotapi[async]>=4.24.0",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.14.0",
    "isort>=5.13.2",
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
